Fixed white space, css error

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,7 +10,7 @@ pre, code{
     background-color: #272727 !important;
 } 
 .bg-img{
-  opacity: .4; !important;
+  opacity: .4 !important;
 }
 #home-center{
   padding-bottom: 50px;
